--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,14 @@
   50% {transform: translateY(-20px);}
   100% {transform: translateY(10px);}
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+    background:  green;
+    height: 1px;
+}
