--- a/src/styles/pages/Home.css
+++ b/src/styles/pages/Home.css
@@ -1,6 +1,3 @@
-.homeBody {
-    /* margin-top: 120px; */
-}
 .homeTop, .homeMid {
     display: flex;
     justify-content: space-between;
@@ -14,22 +11,29 @@
     line-height: 64px;
     overflow: hidden;
     margin-top: -75px;
+    position: absolute;
 }
-.homeTop span {
+.homeTop span, .homeMid span {
     color: rgb(28, 175, 28);
     font-style: italic;
 }
 .homeTop img {
     margin-top: 50px;
     width: 80%;
+    margin-left: 40%;
 }
 
 .homeMid {
     margin-top: 100px;
+    padding: 0px;
 }
 .homeMid p {
     font-size: 24px;
     font-family: 'Inter', sans-serif;
-    width: 50vw;
-    line-height: 32px;
+    position: absolute;
+    right: 25px;
+    width: 40vw;
+    line-height: 36px;
+    font-weight: 600;
+    margin-top: -25px;
 }
