--- a/src/styles/pages/Home.css
+++ b/src/styles/pages/Home.css
@@ -22,18 +22,20 @@
     width: 80%;
     margin-left: 40%;
 }
-
 .homeMid {
     margin-top: 100px;
     padding: 0px;
 }
+.homeMid img {
+    width: 50%;
+}
 .homeMid p {
-    font-size: 24px;
+    font-size: 28px;
     font-family: 'Inter', sans-serif;
     position: absolute;
-    right: 25px;
+    right: 45px;
     width: 40vw;
-    line-height: 36px;
+    line-height: 42px;
     font-weight: 600;
     margin-top: -25px;
 }
